--- a/themes/inhabitent/sass/_elements.scss
+++ b/themes/inhabitent/sass/_elements.scss
@@ -19,6 +19,7 @@ body {
 	background: $color__background-body; /* Fallback for when there is no custom background color defined. */
 	width: 100%;
 	height: 100%;
+	font-size: $font_size-main;
 }
 
 blockquote, q {
@@ -72,3 +73,4 @@ table {
 	margin: 0 0 $base__space-unit;
 	width: 100%;
 }
+
