--- a/themes/inhabitent/sass/_header.scss
+++ b/themes/inhabitent/sass/_header.scss
@@ -20,10 +20,10 @@
     .header-logo{
         display: flex;
         height: 100%;
-        align-items: center;
-        img{
-            width: 50px;
-        }
+        background:
+            url("../../images/inhabitent-logo-tent.svg") no-repeat center;
+        background-size: contain;
+        width: 55px;
     }
 }
 
@@ -76,19 +76,22 @@
         }
         input[type=search] {
             border: 0;
+            background: rgba(255, 255, 255, 0);
         }
     }
 }
 
 .search-field{
-    transition: width 0.5s;
+    transition: all 0.5s;
     width: 0px;
-    font-family: $font_family-header;
+    visibility: hidden;
+    font-family: $font_family-header, serif;
 }
 
 
 .search-field-open {
-    transition: width 0.5s;
+    transition: all 0.5s;
+    visibility: visible;
     width: 170px;
 }
 
