--- a/themes/inhabitent/sass/_page-templates.scss
+++ b/themes/inhabitent/sass/_page-templates.scss
@@ -3,7 +3,7 @@
 --------------------------------------------------------------*/
 
 
-.home, .page-template-about{
+.home, .page-template-about, .adventures-template-default{
 
     .site-header{
         background-color: hsla(0,0%,100%,0);
@@ -179,6 +179,157 @@
 }
 
 
+.adventures-container{
+    position: relative;
+    color: #fff;
+    text-transform: uppercase;
+    font-family: $font_family-header, serif;
+    .front-adventure-title{
+        position: absolute;
+        padding: 10px 20px;
+        width: 100%;
+        margin-top: 1.25em;
+        font-size: 2.25em;
+        top: 0;
+
+        a{
+            color:white;
+            font-family: $font_family-main, serif;
+            font-weight: normal;
+            font-style: normal;
+
+        }
+        }
+    .general-button {
+        line-height: 1.25em;
+        position: absolute;
+        padding: 10px 30px;
+        width: 37%;
+        margin-bottom: 1.25em;
+        background: none;
+        border-color: white;
+        font-size: 1.5em;
+        bottom: 200px;
+        left: 60px;
+        a{
+            color: white; 
+        }
+    }
+
+    .general-button:hover{
+        background: $color_brand_nav;
+    }
+}
+
+.latest-adventures{
+    display: block;
+    height: 110vh;
+    margin-bottom: 50px;
+
+    .front-page-subtitle{
+        height: 10%;
+    }
+
+    .special-button {
+        background: #248a83;
+        border: none;
+        padding: 10px;
+        width: 20%;
+        margin: 10px;
+        text-align: center;
+        a{
+            text-transform: uppercase;
+            color: white;
+            font-family: $font_family-header, serif;
+        }
+    }
+}
+
+.adventures-container{
+    height:100%;
+}
+
+.most-recent-adventures{
+    height: 70%;
+
+    .recent-adventures{
+        padding: 10px;
+    }
+
+    .recent-adventures:first-child{
+        width: 50%;
+        height:100%;
+        float:left;
+        .general-button {
+            font-size: 1.5em;
+            bottom: 10%;
+            left: 10%;
+        } 
+    }
+    .recent-adventures:nth-child(2){
+        width: 50%;
+        height: 50%;
+        float: right;
+        line-height: 1.5em;
+        .front-adventure-title {
+            margin-top: 0.5em;
+            a{
+                font-size: 1.5rem;
+            }
+        }
+        .general-button {
+            font-size: 0.8em;
+            bottom: 10%;
+            left: 10%;
+        } 
+    }
+    .recent-adventures:nth-child(3){
+        width: 25%;
+        height: 50%;
+        float:right;
+        bottom:0;
+        line-height: 1.5em;
+        .front-adventure-title {
+            margin-top: 0.5em;
+            a{
+                font-size: 1.5rem;
+            }
+        }
+        .general-button {
+            font-size: 0.8em;
+            bottom: 3%;
+            left: 18%;
+            width: 55%;
+        } 
+    }
+    .recent-adventures:last-child{
+        width: 25%;
+        height: 50%;
+        float: right;
+        bottom: 0;
+        line-height: 1.5em;
+        .front-adventure-title {
+            margin-top: 0.5em;
+            a{
+                font-size: 1.5rem;
+            }
+        }
+        .general-button {
+            font-size: 0.8em;
+            bottom: 3%;
+            left: 18%;
+            width: 55%;
+        } 
+    }
+}
+
+.adventure-header-image{
+    width: 100%;
+    height: 100%;
+}
+
+
+
 
 /* Sidebar */
 
@@ -350,4 +501,56 @@
         border-radius: 0;
         text-shadow: none;
     }
+}
+
+
+/* Adventure Page */
+
+
+.adventure-content{
+    max-width: 800px;
+    width: 100%;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+
+    .entry-title{
+        margin: 50px 0 5px 0;
+        text-transform: uppercase;
+        letter-spacing: 2px;
+    }
+    .entry-author{
+        text-transform: uppercase;
+        font-family: $font_family-header, serif;
+        font-size: 1.2em;
+        margin: 0;
+        letter-spacing: 2px;
+    }
+    p{
+        line-height: 1.75em;
+    }
+    .shop-social-media{
+        display: flex;
+        flex-direction: row;
+        }
+}
+
+.adventure-archive-content{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    border-top: 1px dashed $color_brand_border;
+    padding-top: 5%;
+
+    .adventures-container{
+        flex: 0 0 49%;
+        margin: 1% 0;
+    }
+
+    .general-button{
+        width: 40%;
+        bottom: 25%;
+    }
+
 }
