--- a/themes/inhabitent/style.css
+++ b/themes/inhabitent/style.css
@@ -487,7 +487,6 @@ a {
   float: left;
   width: 100%; }
   .main-navigation ul {
-    display: none;
     list-style: none;
     margin: 0;
     padding-left: 0; }
@@ -1314,7 +1313,7 @@ object {
 # Header
 --------------------------------------------------------------*/
 .site-header {
-  width: 100%;
+  width: 100vw;
   height: 50px;
   font-family: "novecento", serif;
   text-transform: uppercase;
@@ -1344,18 +1343,31 @@ object {
   -ms-flex-align: center;
       align-items: center; }
   .main-navigation .menu-main-menu-container {
-    width: 75%; }
-    .main-navigation .menu-main-menu-container ul {
+    width: 75%;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-pack: end;
+        justify-content: flex-end; }
+    .main-navigation .menu-main-menu-container .menu {
       padding: 0 2px;
       width: 100%;
       display: -ms-flexbox;
       display: flex;
       -ms-flex-pack: end;
           justify-content: flex-end; }
-      .main-navigation .menu-main-menu-container ul li {
+      .main-navigation .menu-main-menu-container .menu li {
         margin: 0 2%; }
+    .main-navigation .menu-main-menu-container .selectric-wrapper {
+      display: none; }
+    @media (max-width: 600px) {
+      .main-navigation .menu-main-menu-container .menu {
+        display: none; }
+      .main-navigation .menu-main-menu-container .selectric-wrapper {
+        display: -ms-flexbox;
+        display: flex; } }
   .main-navigation .menu-toggle {
-    color: #248A83; }
+    color: #248A83;
+    display: none; }
 
 /*-----Search Form-----*/
 .search-form {
@@ -1445,3 +1457,220 @@ input[type=search]:focus {
       text-align: center;
       -ms-flex-item-align: end;
           align-self: flex-end; }
+
+/*======================================
+  Selectric v1.11.1
+======================================*/
+.selectric-wrapper {
+  position: relative;
+  cursor: pointer;
+  border: none; }
+
+.selectric-responsive {
+  width: 100%; }
+
+.selectric {
+  border: none;
+  border-radius: 0px;
+  background: none;
+  position: relative;
+  overflow: hidden; }
+
+.selectric .label {
+  display: block;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  margin: 0 38px 0 10px;
+  font-size: 12px;
+  line-height: 38px;
+  color: #444;
+  font-family: "novecento", sans-serif;
+  height: 38px;
+  color: #fff;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none; }
+
+.selectric .button {
+  display: block;
+  position: absolute;
+  right: 0;
+  top: 0;
+  width: 38px;
+  height: 38px;
+  line-height: 38px;
+  background-color: none;
+  color: white;
+  text-align: center;
+  font: 0/0 a;
+  *font: 20px/38px Lucida Sans Unicode, Arial Unicode MS, Arial; }
+
+.selectric .button:after {
+  content: " ";
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  margin: auto;
+  width: 0;
+  height: 0;
+  border: 4px solid transparent;
+  border-top-color: #BBB;
+  border-bottom: none; }
+
+.selectric-focus .selectric {
+  border-color: #aaaaaa; }
+
+.selectric-hover .selectric {
+  border-color: #c4c4c4; }
+
+.selectric-hover .selectric .button {
+  color: #a2a2a2; }
+
+.selectric-hover .selectric .button:after {
+  border-top-color: #a2a2a2; }
+
+.selectric-open {
+  z-index: 9999; }
+
+.selectric-open .selectric {
+  border-color: #c4c4c4; }
+
+.selectric-open .selectric-items {
+  display: block; }
+
+.selectric-disabled {
+  filter: alpha(opacity=50);
+  opacity: 0.5;
+  cursor: default;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none; }
+
+.selectric-hide-select {
+  position: relative;
+  overflow: hidden;
+  width: 0;
+  height: 0; }
+
+.selectric-hide-select select {
+  position: absolute;
+  left: -100%; }
+
+.selectric-hide-select.selectric-is-native {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: 10; }
+
+.selectric-hide-select.selectric-is-native select {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  height: 100%;
+  width: 100%;
+  border: none;
+  z-index: 1;
+  box-sizing: border-box;
+  opacity: 0; }
+
+.selectric-input {
+  display: none;
+  position: absolute !important;
+  top: 0 !important;
+  left: 0 !important;
+  overflow: hidden !important;
+  clip: rect(0, 0, 0, 0) !important;
+  margin: 0 !important;
+  padding: 0 !important;
+  width: 1px !important;
+  height: 1px !important;
+  outline: none !important;
+  border: none !important;
+  *font: 0/0 a !important;
+  background: none !important; }
+
+.selectric-temp-show {
+  position: absolute !important;
+  visibility: hidden !important;
+  display: block !important; }
+
+/* Items box */
+.selectric-items {
+  display: none;
+  position: absolute;
+  top: 100%;
+  left: 0;
+  background: #F8F8F8;
+  border: 1px solid #c4c4c4;
+  z-index: -1;
+  box-shadow: 0 0 10px -6px; }
+
+.selectric-items .selectric-scroll {
+  height: 100%;
+  overflow: auto; }
+
+.selectric-above .selectric-items {
+  top: auto;
+  bottom: 100%; }
+
+.selectric-items ul, .selectric-items li {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  font-size: 12px;
+  line-height: 20px;
+  min-height: 20px; }
+
+.selectric-items li {
+  width: 100%;
+  display: block;
+  padding: 10px;
+  color: #666;
+  cursor: pointer; }
+
+.selectric-items li.selected {
+  background: #E0E0E0;
+  color: #444; }
+
+.selectric-items li.highlighted {
+  background: #D0D0D0;
+  color: #f0e4d1; }
+
+.selectric-items li:hover {
+  background: #D5D5D5;
+  color: #f0e4d1; }
+
+.selectric-items .disabled {
+  filter: alpha(opacity=50);
+  opacity: 0.5;
+  cursor: default !important;
+  background: none !important;
+  color: #666 !important;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none; }
+
+.selectric-items .selectric-group .selectric-group-label {
+  font-weight: bold;
+  padding-left: 10px;
+  cursor: default;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  background: none;
+  color: #444; }
+
+.selectric-items .selectric-group.disabled li {
+  filter: alpha(opacity=100);
+  opacity: 1; }
+
+.selectric-items .selectric-group li {
+  padding-left: 25px; }
